Fix tools for larger meshes

--- a/spacing.ipynb
+++ b/spacing.ipynb
@@ -24,9 +24,11 @@
    "source": [
     "# name of the file, or files (with wildcard) to open\n",
     "dataname = '/Users/jlilly/viz/tusas/650x128_at0.6/results.e.8.*'\n",
+    "#dataname = '/Users/jlilly/mnt/Farzadi/2208x2208/at0.6/decomp/results.e.512.*'\n",
     "\n",
     "# position in x for line data\n",
     "x_pos = 259.51\n",
+    "#x_pos = 1200\n",
     "\n",
     "# threshold for whether dendrites are treated as paired\n",
     "threshold = 6"
@@ -37,16 +39,7 @@
    "execution_count": 3,
    "id": "fd95b122-afb9-4d3c-950a-07b6c25466fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jlilly/viz/tusas/650x128_at0.6/259.51.csv not found, generating with ParaView...\n",
-      "done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_list = sorted(glob.glob(dataname))\n",
     "datapath = '/'.join(dataname.split('/')[:-1]) + '/'\n",
@@ -103,6 +96,8 @@
     "\n",
     "ax.set_ylabel('pp0')\n",
     "ax.set_xlabel('arc length')\n",
+    "\n",
+    "#ax.set_xlim([500, 700])\n",
     "\n",
     "fig.tight_layout()\n",
     "plt.show()\n",
